feat: make script executable via bin

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "bin": {
+    "static-builder": "bin/static-builder"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
