--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A simple and fast static site builder",
   "main": "index.js",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
@@ -28,6 +29,8 @@
     "url": "https://github.com/andreasremdt/static-builder/issues"
   },
   "dependencies": {
+    "fs-extra": "^9.1.0",
+    "glob": "^7.1.6",
     "gray-matter": "^4.0.2",
     "marked": "^2.0.0",
     "nunjucks": "^3.2.3"
